--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   </head>
   <body>
     
-    <h1>The Best Burger</h1>
-    <h2>Only $9.99</h2>
+    <h1>Build-a-Burger</h1>
+    <h2>The Best Burger</h2>
+    <h3>Only $9.99</h3>
 
     <!-- 
     Rearrange the elements below to make your own custom burger. 
