--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Build-a-Burger</title>
     <link rel="stylesheet" href="style.css">
@@ -17,17 +18,9 @@
     
     <div class="burger">
       <div class="bun-top"></div>
-      <div class="cheese"></div>
+      <div class="onion"></div>
       <div class="tomato"></div>
       <div class="cheese"></div>
-      <div class="cheese"></div>
-      <div class="cheese"></div>
-      <div class="onion"></div>
-      <div class="meatball"></div>
-      <div class="meatball"></div>
-      <div class="meatball"></div>
-      <div class="pickle"></div>
-      <div class="patty"></div>
       <div class="patty"></div>
       <div class="bun-bottom"></div>
       <div class="plate"></div>
